fix: workaround for delete style: button spacing chore: remove ref react-modal

--- a/app/main.scss
+++ b/app/main.scss
@@ -43,6 +43,10 @@ body {
 	background-color: #e5e5e5;
 }
 
+button {
+	margin-right: 8px;
+}
+
 // react-bootstrap modal
 .modal-container {
   position: relative;
